@@ -322,7 +322,7 @@ CMD ["catalina.sh" "run"]
 ## `geonetwork:3.6.0-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:1612b95045f7cf24c10aebac0a6cb095c7f87950cb38e6399dd28e85bb98b06d
+$ docker pull geonetwork@sha256:fe8f4d13cd0ad834c8afbaf3f610eb02cf951e5f9ba36577dc65084f462ff0f4
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -332,14 +332,14 @@ $ docker pull geonetwork@sha256:1612b95045f7cf24c10aebac0a6cb095c7f87950cb38e639
 ### `geonetwork:3.6.0-postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:cf4cbd34ba3b0a350cf4ae2938ce86690d53c2e214c50c46a620169f24ddcc7e
+$ docker pull geonetwork@sha256:a49de71dd78f3c355c141b7bd9ebbd83db2589d04434dbf8d380377c35fb8e29
 ```
 
 -	Docker Version: 18.06.1-ce
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **439.5 MB (439467811 bytes)**  
+-	Total Size: **439.5 MB (439467858 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:3690a6e0121cbf253e4d40557ca0404f88c37e3caf79c6175481207ca65605d1`
+-	Image ID: `sha256:5c2b62a95d008c26c84768a9e01659b66dcc8ce378f6c310b2a4b4c9dd4a3fad`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -426,11 +426,11 @@ RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/li
 RUN sed -i -e 's#<import resource="../config-db/h2.xml"/>#<!--<import resource="../config-db/h2.xml"/> -->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
 # Sat, 19 Oct 2019 09:28:03 GMT
 COPY file:2dedfd940a86106b2ae284c537f14d365881c03a01b212f81b49177bb22c8d7a in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Sat, 19 Oct 2019 09:28:03 GMT
-COPY file:ae87cab6eab0739a95b3829524c5a3733bc4f9ddd42a6c15afe4e85663dc9f2e in /entrypoint.sh 
-# Sat, 19 Oct 2019 09:28:03 GMT
+# Tue, 05 Nov 2019 22:23:41 GMT
+COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
+# Tue, 05 Nov 2019 22:23:41 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Sat, 19 Oct 2019 09:28:04 GMT
+# Tue, 05 Nov 2019 22:23:41 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -495,15 +495,15 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Sat, 19 Oct 2019 09:29:08 GMT  
 		Size: 555.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:b745f625540759066a2c871e004d2f39baf83d445296eba7b475998ba393134d`  
-		Last Modified: Sat, 19 Oct 2019 09:29:08 GMT  
-		Size: 926.0 B  
+	-	`sha256:f2639af93a1d07f268ea8b447ffc7e44cb7256c7420230db19d9d2a13f8fa920`  
+		Last Modified: Tue, 05 Nov 2019 22:24:28 GMT  
+		Size: 973.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.6-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:1612b95045f7cf24c10aebac0a6cb095c7f87950cb38e6399dd28e85bb98b06d
+$ docker pull geonetwork@sha256:fe8f4d13cd0ad834c8afbaf3f610eb02cf951e5f9ba36577dc65084f462ff0f4
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -513,14 +513,14 @@ $ docker pull geonetwork@sha256:1612b95045f7cf24c10aebac0a6cb095c7f87950cb38e639
 ### `geonetwork:3.6-postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:cf4cbd34ba3b0a350cf4ae2938ce86690d53c2e214c50c46a620169f24ddcc7e
+$ docker pull geonetwork@sha256:a49de71dd78f3c355c141b7bd9ebbd83db2589d04434dbf8d380377c35fb8e29
 ```
 
 -	Docker Version: 18.06.1-ce
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **439.5 MB (439467811 bytes)**  
+-	Total Size: **439.5 MB (439467858 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:3690a6e0121cbf253e4d40557ca0404f88c37e3caf79c6175481207ca65605d1`
+-	Image ID: `sha256:5c2b62a95d008c26c84768a9e01659b66dcc8ce378f6c310b2a4b4c9dd4a3fad`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -607,11 +607,11 @@ RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/li
 RUN sed -i -e 's#<import resource="../config-db/h2.xml"/>#<!--<import resource="../config-db/h2.xml"/> -->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
 # Sat, 19 Oct 2019 09:28:03 GMT
 COPY file:2dedfd940a86106b2ae284c537f14d365881c03a01b212f81b49177bb22c8d7a in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Sat, 19 Oct 2019 09:28:03 GMT
-COPY file:ae87cab6eab0739a95b3829524c5a3733bc4f9ddd42a6c15afe4e85663dc9f2e in /entrypoint.sh 
-# Sat, 19 Oct 2019 09:28:03 GMT
+# Tue, 05 Nov 2019 22:23:41 GMT
+COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
+# Tue, 05 Nov 2019 22:23:41 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Sat, 19 Oct 2019 09:28:04 GMT
+# Tue, 05 Nov 2019 22:23:41 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -676,15 +676,15 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Sat, 19 Oct 2019 09:29:08 GMT  
 		Size: 555.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:b745f625540759066a2c871e004d2f39baf83d445296eba7b475998ba393134d`  
-		Last Modified: Sat, 19 Oct 2019 09:29:08 GMT  
-		Size: 926.0 B  
+	-	`sha256:f2639af93a1d07f268ea8b447ffc7e44cb7256c7420230db19d9d2a13f8fa920`  
+		Last Modified: Tue, 05 Nov 2019 22:24:28 GMT  
+		Size: 973.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.8`
 
 ```console
-$ docker pull geonetwork@sha256:4b0cf8201e83f1e2af724ea41954bc59444913547cb9ff902cf34e3eb4154408
+$ docker pull geonetwork@sha256:c95d5b4b391ecb72e4b11e503c73813516034241656abd70e6dcf3cecd86e24e
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -694,14 +694,14 @@ $ docker pull geonetwork@sha256:4b0cf8201e83f1e2af724ea41954bc59444913547cb9ff90
 ### `geonetwork:3.8` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:e82f1c18cfd02be4280b1472ffc0e25a91ece265c857f7f5819731e487f93257
+$ docker pull geonetwork@sha256:be2d2be3c59a09549d92bfb61e5ea15d92ba07f05d9421d810f0a596d4b8de33
 ```
 
 -	Docker Version: 18.06.1-ce
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **437.0 MB (436973880 bytes)**  
+-	Total Size: **439.6 MB (439589968 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:c8d04e0920a2dab337a3c1f8b2898f80e96c5282ed07ae7781c32f684da52f9c`
+-	Image ID: `sha256:c865a92a37f24061e430f515e9a48349dbaa1d364cd53ddec5d8d5184b5b490d`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -768,19 +768,19 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Sat, 19 Oct 2019 09:27:28 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Mon, 21 Oct 2019 16:19:45 GMT
-ENV GN_VERSION=3.8.1
-# Mon, 21 Oct 2019 16:19:46 GMT
-ENV GN_DOWNLOAD_MD5=3147cf5775b250330df2322c9d180eed
-# Mon, 21 Oct 2019 16:19:46 GMT
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_VERSION=3.8.2
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_DOWNLOAD_MD5=da014d9cdef0a855cf04a8aaeb418895
+# Tue, 05 Nov 2019 22:23:45 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:23:59 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/geonetwork.war/download &&      echo "$GN_DOWNLOAD_MD5 *$GN_FILE" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:23:59 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:24:00 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:24:00 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -825,37 +825,353 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Sat, 19 Oct 2019 02:33:30 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:10526a1f1eed1f4637fdad8656b4b20122f78297897db4d00f24b96ec99ea92a`  
-		Last Modified: Mon, 21 Oct 2019 16:20:47 GMT  
-		Size: 206.1 MB (206096794 bytes)  
+	-	`sha256:82b326de88717f7ab9be547f08d0717f7499bce43e3005c28108de1f06ff41f3`  
+		Last Modified: Tue, 05 Nov 2019 22:24:47 GMT  
+		Size: 208.7 MB (208712881 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:fff17f0bb0ac92d93a9c013031803e39d6025d320a35938ae7aedcc3f4853bd4`  
-		Last Modified: Mon, 21 Oct 2019 16:20:32 GMT  
-		Size: 249.0 B  
+	-	`sha256:b334d65f2455269c4cc4d1d9bbedece0fccbe5a36af12de412bf2d72199098cb`  
+		Last Modified: Tue, 05 Nov 2019 22:24:31 GMT  
+		Size: 250.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.8.2`
 
 ```console
-$ docker pull geonetwork@sha256:a8409dff6597f2ef5f7ecd3c672671bb2af9a390073efd74f95c54aa41cba22a
+$ docker pull geonetwork@sha256:c95d5b4b391ecb72e4b11e503c73813516034241656abd70e6dcf3cecd86e24e
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
 -	Platforms:
+	-	linux; amd64
+
+### `geonetwork:3.8.2` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:be2d2be3c59a09549d92bfb61e5ea15d92ba07f05d9421d810f0a596d4b8de33
+```
+
+-	Docker Version: 18.06.1-ce
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **439.6 MB (439589968 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:c865a92a37f24061e430f515e9a48349dbaa1d364cd53ddec5d8d5184b5b490d`
+-	Entrypoint: `["\/entrypoint.sh"]`
+-	Default Command: `["catalina.sh","run"]`
+
+```dockerfile
+# Wed, 16 Oct 2019 23:29:01 GMT
+ADD file:fdf0128645db4c8b990073dc4fe3fabad50411032c9aa4f86538d46e0e8f158f in / 
+# Wed, 16 Oct 2019 23:29:01 GMT
+CMD ["bash"]
+# Thu, 17 Oct 2019 04:11:35 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		ca-certificates 		curl 		netbase 		wget 	&& rm -rf /var/lib/apt/lists/*
+# Thu, 17 Oct 2019 04:11:44 GMT
+RUN set -ex; 	if ! command -v gpg > /dev/null; then 		apt-get update; 		apt-get install -y --no-install-recommends 			gnupg 			dirmngr 		; 		rm -rf /var/lib/apt/lists/*; 	fi
+# Thu, 17 Oct 2019 04:12:17 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		bzr 		git 		mercurial 		openssh-client 		subversion 				procps 	&& rm -rf /var/lib/apt/lists/*
+# Thu, 17 Oct 2019 08:29:24 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		bzip2 		unzip 		xz-utils 				ca-certificates p11-kit 				fontconfig libfreetype6 	; 	rm -rf /var/lib/apt/lists/*
+# Thu, 17 Oct 2019 08:29:24 GMT
+ENV LANG=C.UTF-8
+# Thu, 17 Oct 2019 08:30:55 GMT
+ENV JAVA_HOME=/usr/local/openjdk-8
+# Thu, 17 Oct 2019 08:30:56 GMT
+ENV PATH=/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Thu, 17 Oct 2019 08:30:57 GMT
+RUN { echo '#/bin/sh'; echo 'echo "$JAVA_HOME"'; } > /usr/local/bin/docker-java-home && chmod +x /usr/local/bin/docker-java-home && [ "$JAVA_HOME" = "$(docker-java-home)" ]
+# Fri, 18 Oct 2019 23:40:49 GMT
+ENV JAVA_VERSION=8u232
+# Fri, 18 Oct 2019 23:40:49 GMT
+ENV JAVA_BASE_URL=https://github.com/AdoptOpenJDK/openjdk8-upstream-binaries/releases/download/jdk8u232-b09/OpenJDK8U-jdk_
+# Fri, 18 Oct 2019 23:40:49 GMT
+ENV JAVA_URL_VERSION=8u232b09
+# Fri, 18 Oct 2019 23:40:58 GMT
+RUN set -eux; 		dpkgArch="$(dpkg --print-architecture)"; 	case "$dpkgArch" in 		amd64) upstreamArch='x64' ;; 		arm64) upstreamArch='aarch64' ;; 		*) echo >&2 "error: unsupported architecture: $dpkgArch" ;; 	esac; 		wget -O openjdk.tgz.asc "${JAVA_BASE_URL}${upstreamArch}_linux_${JAVA_URL_VERSION}.tar.gz.sign"; 	wget -O openjdk.tgz "${JAVA_BASE_URL}${upstreamArch}_linux_${JAVA_URL_VERSION}.tar.gz" --progress=dot:giga; 		export GNUPGHOME="$(mktemp -d)"; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --keyserver-options no-self-sigs-only --recv-keys CA5F11C6CE22644D42C6AC4492EF8D39DC13168F; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys EAC843EBD3EFDB98CC772FADA5CD6035332FA671; 	gpg --batch --list-sigs --keyid-format 0xLONG CA5F11C6CE22644D42C6AC4492EF8D39DC13168F 		| tee /dev/stderr 		| grep '0xA5CD6035332FA671' 		| grep 'Andrew Haley'; 	gpg --batch --verify openjdk.tgz.asc openjdk.tgz; 	gpgconf --kill all; 	rm -rf "$GNUPGHOME"; 		mkdir -p "$JAVA_HOME"; 	tar --extract 		--file openjdk.tgz 		--directory "$JAVA_HOME" 		--strip-components 1 		--no-same-owner 	; 	rm openjdk.tgz*; 			{ 		echo '#!/usr/bin/env bash'; 		echo 'set -Eeuo pipefail'; 		echo 'if ! [ -d "$JAVA_HOME" ]; then echo >&2 "error: missing JAVA_HOME environment variable"; exit 1; fi'; 		echo 'cacertsFile=; for f in "$JAVA_HOME/lib/security/cacerts" "$JAVA_HOME/jre/lib/security/cacerts"; do if [ -e "$f" ]; then cacertsFile="$f"; break; fi; done'; 		echo 'if [ -z "$cacertsFile" ] || ! [ -f "$cacertsFile" ]; then echo >&2 "error: failed to find cacerts file in $JAVA_HOME"; exit 1; fi'; 		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$cacertsFile"'; 	} > /etc/ca-certificates/update.d/docker-openjdk; 	chmod +x /etc/ca-certificates/update.d/docker-openjdk; 	/etc/ca-certificates/update.d/docker-openjdk; 		find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; 	ldconfig; 		javac -version; 	java -version
+# Sat, 19 Oct 2019 02:18:54 GMT
+ENV CATALINA_HOME=/usr/local/tomcat
+# Sat, 19 Oct 2019 02:18:54 GMT
+ENV PATH=/usr/local/tomcat/bin:/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Sat, 19 Oct 2019 02:18:55 GMT
+RUN mkdir -p "$CATALINA_HOME"
+# Sat, 19 Oct 2019 02:18:55 GMT
+WORKDIR /usr/local/tomcat
+# Sat, 19 Oct 2019 02:18:55 GMT
+ENV TOMCAT_NATIVE_LIBDIR=/usr/local/tomcat/native-jni-lib
+# Sat, 19 Oct 2019 02:18:56 GMT
+ENV LD_LIBRARY_PATH=/usr/local/tomcat/native-jni-lib
+# Sat, 19 Oct 2019 02:25:37 GMT
+ENV GPG_KEYS=05AB33110949707C93A279E3D3EFE6B686867BA6 07E48665A34DCAFAE522E5E6266191C37C037D42 47309207D818FFD8DCD3F83F1931D684307A10A5 541FBE7D8F78B25E055DDEE13C370389288584E7 61B832AC2F1C5A90F0F9B00A1C506407564C17A3 713DA88BE50911535FE716F5208B0AB1D63011C7 79F7026C690BAA50B92CD8B66A3AD3F4F22C4FED 9BA44C2621385CB966EBA586F72C284D731FABEE A27677289986DB50844682F8ACB77FC2E86E29AC A9C5DF4D22E99998D9875A5110C01C5A2F6059E7 DCFD35E0BF8CA7344752DE8B6FB21E8933C60243 F3A04C595DB5B6A5F1ECA43E3B7BBB100D811BBE F7DA48BB64BCB84ECBA7EE6935CD23C10D498E23
+# Sat, 19 Oct 2019 02:25:37 GMT
+ENV TOMCAT_MAJOR=8
+# Sat, 19 Oct 2019 02:25:37 GMT
+ENV TOMCAT_VERSION=8.5.47
+# Sat, 19 Oct 2019 02:25:37 GMT
+ENV TOMCAT_SHA512=079b85f3dfca2b137634859208fae6012860201d720d12ff0add3473f1e267d332cb12803958754e1f922599e0d42b7e97f00bcd62584d9148a6f45fde091716
+# Sat, 19 Oct 2019 02:26:04 GMT
+RUN set -eux; 		savedAptMark="$(apt-mark showmanual)"; 	apt-get update; 	apt-get install -y --no-install-recommends 		gnupg dirmngr 		wget ca-certificates 	; 		ddist() { 		local f="$1"; shift; 		local distFile="$1"; shift; 		local success=; 		local distUrl=; 		for distUrl in 			'https://www.apache.org/dyn/closer.cgi?action=download&filename=' 			https://www-us.apache.org/dist/ 			https://www.apache.org/dist/ 			https://archive.apache.org/dist/ 		; do 			if wget -O "$f" "$distUrl$distFile" && [ -s "$f" ]; then 				success=1; 				break; 			fi; 		done; 		[ -n "$success" ]; 	}; 		ddist 'tomcat.tar.gz' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz"; 	echo "$TOMCAT_SHA512 *tomcat.tar.gz" | sha512sum --strict --check -; 	ddist 'tomcat.tar.gz.asc' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz.asc"; 	export GNUPGHOME="$(mktemp -d)"; 	for key in $GPG_KEYS; do 		gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; 	done; 	gpg --batch --verify tomcat.tar.gz.asc tomcat.tar.gz; 	tar -xf tomcat.tar.gz --strip-components=1; 	rm bin/*.bat; 	rm tomcat.tar.gz*; 	command -v gpgconf && gpgconf --kill all || :; 	rm -rf "$GNUPGHOME"; 		nativeBuildDir="$(mktemp -d)"; 	tar -xf bin/tomcat-native.tar.gz -C "$nativeBuildDir" --strip-components=1; 	apt-get install -y --no-install-recommends 		dpkg-dev 		gcc 		libapr1-dev 		libssl-dev 		make 	; 	( 		export CATALINA_HOME="$PWD"; 		cd "$nativeBuildDir/native"; 		gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; 		aprConfig="$(command -v apr-1-config)"; 		./configure 			--build="$gnuArch" 			--libdir="$TOMCAT_NATIVE_LIBDIR" 			--prefix="$CATALINA_HOME" 			--with-apr="$aprConfig" 			--with-java-home="$JAVA_HOME" 			--with-ssl=yes; 		make -j "$(nproc)"; 		make install; 	); 	rm -rf "$nativeBuildDir"; 	rm bin/tomcat-native.tar.gz; 		apt-mark auto '.*' > /dev/null; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; 	find "$TOMCAT_NATIVE_LIBDIR" -type f -executable -exec ldd '{}' ';' 		| awk '/=>/ { print $(NF-1) }' 		| sort -u 		| xargs -r dpkg-query --search 		| cut -d: -f1 		| sort -u 		| xargs -r apt-mark manual 	; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; 	rm -rf /var/lib/apt/lists/*; 		find ./bin/ -name '*.sh' -exec sed -ri 's|^#!/bin/sh$|#!/usr/bin/env bash|' '{}' +; 		chmod -R +rX .; 	chmod 777 logs temp work
+# Sat, 19 Oct 2019 02:26:06 GMT
+RUN set -e 	&& nativeLines="$(catalina.sh configtest 2>&1)" 	&& nativeLines="$(echo "$nativeLines" | grep 'Apache Tomcat Native')" 	&& nativeLines="$(echo "$nativeLines" | sort -u)" 	&& if ! echo "$nativeLines" | grep 'INFO: Loaded APR based Apache Tomcat Native library' >&2; then 		echo >&2 "$nativeLines"; 		exit 1; 	fi
+# Sat, 19 Oct 2019 02:26:06 GMT
+EXPOSE 8080
+# Sat, 19 Oct 2019 02:26:07 GMT
+CMD ["catalina.sh" "run"]
+# Sat, 19 Oct 2019 09:27:28 GMT
+ENV GN_FILE=geonetwork.war
+# Sat, 19 Oct 2019 09:27:28 GMT
+ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
+# Sat, 19 Oct 2019 09:27:28 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_VERSION=3.8.2
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_DOWNLOAD_MD5=da014d9cdef0a855cf04a8aaeb418895
+# Tue, 05 Nov 2019 22:23:45 GMT
+WORKDIR /usr/local/tomcat/webapps
+# Tue, 05 Nov 2019 22:23:59 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/geonetwork.war/download &&      echo "$GN_DOWNLOAD_MD5 *$GN_FILE" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Tue, 05 Nov 2019 22:23:59 GMT
+COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
+# Tue, 05 Nov 2019 22:24:00 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Tue, 05 Nov 2019 22:24:00 GMT
+CMD ["catalina.sh" "run"]
+```
+
+-	Layers:
+	-	`sha256:9a0b0ce99936ce4861d44ce1f193e881e5b40b5bf1847627061205b092fa7f1d`  
+		Last Modified: Wed, 16 Oct 2019 23:35:00 GMT  
+		Size: 45.4 MB (45380663 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:db3b6004c61a0e86fbf910b9b4a6611ae79e238a336011a1b5f9b177d85cbf9d`  
+		Last Modified: Thu, 17 Oct 2019 04:20:34 GMT  
+		Size: 10.8 MB (10797042 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f8f0759202953be4b156f44bba90b682b61f985f9bbc60e7262b216f70dabb96`  
+		Last Modified: Thu, 17 Oct 2019 04:20:32 GMT  
+		Size: 4.3 MB (4340228 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:6ef14aff1139e1065ec0928ae1c07f2cff8c2b35e760f4b463df5c64e6ea1101`  
+		Last Modified: Thu, 17 Oct 2019 04:20:56 GMT  
+		Size: 50.1 MB (50065461 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:962785d3b7f9bd4442aa6df1862d8ad64e0ee1d57ec02d7d82aeecc0a8b0f4d2`  
+		Last Modified: Thu, 17 Oct 2019 08:38:07 GMT  
+		Size: 4.9 MB (4935455 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:631589572f9b44b8d0b6c2c6c1fc656fc4ae1669367888bfe622bbea1ca9cc83`  
+		Last Modified: Thu, 17 Oct 2019 08:40:08 GMT  
+		Size: 220.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:c55a0c6f4c7b3d24524aa43520898369ae5b6b671f7b2768c92236c1c990ba95`  
+		Last Modified: Fri, 18 Oct 2019 23:46:41 GMT  
+		Size: 104.2 MB (104167782 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:379605d88e88b03820ef61d475cfbe79f7a8ad66e9141ecf42725bdef40c580f`  
+		Last Modified: Sat, 19 Oct 2019 02:32:18 GMT  
+		Size: 150.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:e056aa10ded88422ebcdfb78c799b00b86bb32fe0cb11f4a073fd1c1d84ae31e`  
+		Last Modified: Sat, 19 Oct 2019 02:33:32 GMT  
+		Size: 11.2 MB (11189706 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:6349a1c98d85261d10bdff10e8b58a30ba790c0cecd9895d296b1d65bbd9a03a`  
+		Last Modified: Sat, 19 Oct 2019 02:33:30 GMT  
+		Size: 130.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:82b326de88717f7ab9be547f08d0717f7499bce43e3005c28108de1f06ff41f3`  
+		Last Modified: Tue, 05 Nov 2019 22:24:47 GMT  
+		Size: 208.7 MB (208712881 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b334d65f2455269c4cc4d1d9bbedece0fccbe5a36af12de412bf2d72199098cb`  
+		Last Modified: Tue, 05 Nov 2019 22:24:31 GMT  
+		Size: 250.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.8.2-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:a8409dff6597f2ef5f7ecd3c672671bb2af9a390073efd74f95c54aa41cba22a
+$ docker pull geonetwork@sha256:d14687e0c3b5915e7c4b52c83429ab3290d8bad21a646db815d63949b094f2d5
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
 -	Platforms:
+	-	linux; amd64
+
+### `geonetwork:3.8.2-postgres` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:53cee53391e1c9441166696e10f19f9a7210889d27b53f83f0ab7db2dffb63da
+```
+
+-	Docker Version: 18.06.1-ce
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **452.2 MB (452199435 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:ec85b6047b6916c1228ee9a1cc3a065b2ca0a8349219461d46412a872440a18e`
+-	Entrypoint: `["\/entrypoint.sh"]`
+-	Default Command: `["catalina.sh","run"]`
+
+```dockerfile
+# Wed, 16 Oct 2019 23:29:01 GMT
+ADD file:fdf0128645db4c8b990073dc4fe3fabad50411032c9aa4f86538d46e0e8f158f in / 
+# Wed, 16 Oct 2019 23:29:01 GMT
+CMD ["bash"]
+# Thu, 17 Oct 2019 04:11:35 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		ca-certificates 		curl 		netbase 		wget 	&& rm -rf /var/lib/apt/lists/*
+# Thu, 17 Oct 2019 04:11:44 GMT
+RUN set -ex; 	if ! command -v gpg > /dev/null; then 		apt-get update; 		apt-get install -y --no-install-recommends 			gnupg 			dirmngr 		; 		rm -rf /var/lib/apt/lists/*; 	fi
+# Thu, 17 Oct 2019 04:12:17 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		bzr 		git 		mercurial 		openssh-client 		subversion 				procps 	&& rm -rf /var/lib/apt/lists/*
+# Thu, 17 Oct 2019 08:29:24 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		bzip2 		unzip 		xz-utils 				ca-certificates p11-kit 				fontconfig libfreetype6 	; 	rm -rf /var/lib/apt/lists/*
+# Thu, 17 Oct 2019 08:29:24 GMT
+ENV LANG=C.UTF-8
+# Thu, 17 Oct 2019 08:30:55 GMT
+ENV JAVA_HOME=/usr/local/openjdk-8
+# Thu, 17 Oct 2019 08:30:56 GMT
+ENV PATH=/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Thu, 17 Oct 2019 08:30:57 GMT
+RUN { echo '#/bin/sh'; echo 'echo "$JAVA_HOME"'; } > /usr/local/bin/docker-java-home && chmod +x /usr/local/bin/docker-java-home && [ "$JAVA_HOME" = "$(docker-java-home)" ]
+# Fri, 18 Oct 2019 23:40:49 GMT
+ENV JAVA_VERSION=8u232
+# Fri, 18 Oct 2019 23:40:49 GMT
+ENV JAVA_BASE_URL=https://github.com/AdoptOpenJDK/openjdk8-upstream-binaries/releases/download/jdk8u232-b09/OpenJDK8U-jdk_
+# Fri, 18 Oct 2019 23:40:49 GMT
+ENV JAVA_URL_VERSION=8u232b09
+# Fri, 18 Oct 2019 23:40:58 GMT
+RUN set -eux; 		dpkgArch="$(dpkg --print-architecture)"; 	case "$dpkgArch" in 		amd64) upstreamArch='x64' ;; 		arm64) upstreamArch='aarch64' ;; 		*) echo >&2 "error: unsupported architecture: $dpkgArch" ;; 	esac; 		wget -O openjdk.tgz.asc "${JAVA_BASE_URL}${upstreamArch}_linux_${JAVA_URL_VERSION}.tar.gz.sign"; 	wget -O openjdk.tgz "${JAVA_BASE_URL}${upstreamArch}_linux_${JAVA_URL_VERSION}.tar.gz" --progress=dot:giga; 		export GNUPGHOME="$(mktemp -d)"; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --keyserver-options no-self-sigs-only --recv-keys CA5F11C6CE22644D42C6AC4492EF8D39DC13168F; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys EAC843EBD3EFDB98CC772FADA5CD6035332FA671; 	gpg --batch --list-sigs --keyid-format 0xLONG CA5F11C6CE22644D42C6AC4492EF8D39DC13168F 		| tee /dev/stderr 		| grep '0xA5CD6035332FA671' 		| grep 'Andrew Haley'; 	gpg --batch --verify openjdk.tgz.asc openjdk.tgz; 	gpgconf --kill all; 	rm -rf "$GNUPGHOME"; 		mkdir -p "$JAVA_HOME"; 	tar --extract 		--file openjdk.tgz 		--directory "$JAVA_HOME" 		--strip-components 1 		--no-same-owner 	; 	rm openjdk.tgz*; 			{ 		echo '#!/usr/bin/env bash'; 		echo 'set -Eeuo pipefail'; 		echo 'if ! [ -d "$JAVA_HOME" ]; then echo >&2 "error: missing JAVA_HOME environment variable"; exit 1; fi'; 		echo 'cacertsFile=; for f in "$JAVA_HOME/lib/security/cacerts" "$JAVA_HOME/jre/lib/security/cacerts"; do if [ -e "$f" ]; then cacertsFile="$f"; break; fi; done'; 		echo 'if [ -z "$cacertsFile" ] || ! [ -f "$cacertsFile" ]; then echo >&2 "error: failed to find cacerts file in $JAVA_HOME"; exit 1; fi'; 		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$cacertsFile"'; 	} > /etc/ca-certificates/update.d/docker-openjdk; 	chmod +x /etc/ca-certificates/update.d/docker-openjdk; 	/etc/ca-certificates/update.d/docker-openjdk; 		find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; 	ldconfig; 		javac -version; 	java -version
+# Sat, 19 Oct 2019 02:18:54 GMT
+ENV CATALINA_HOME=/usr/local/tomcat
+# Sat, 19 Oct 2019 02:18:54 GMT
+ENV PATH=/usr/local/tomcat/bin:/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Sat, 19 Oct 2019 02:18:55 GMT
+RUN mkdir -p "$CATALINA_HOME"
+# Sat, 19 Oct 2019 02:18:55 GMT
+WORKDIR /usr/local/tomcat
+# Sat, 19 Oct 2019 02:18:55 GMT
+ENV TOMCAT_NATIVE_LIBDIR=/usr/local/tomcat/native-jni-lib
+# Sat, 19 Oct 2019 02:18:56 GMT
+ENV LD_LIBRARY_PATH=/usr/local/tomcat/native-jni-lib
+# Sat, 19 Oct 2019 02:25:37 GMT
+ENV GPG_KEYS=05AB33110949707C93A279E3D3EFE6B686867BA6 07E48665A34DCAFAE522E5E6266191C37C037D42 47309207D818FFD8DCD3F83F1931D684307A10A5 541FBE7D8F78B25E055DDEE13C370389288584E7 61B832AC2F1C5A90F0F9B00A1C506407564C17A3 713DA88BE50911535FE716F5208B0AB1D63011C7 79F7026C690BAA50B92CD8B66A3AD3F4F22C4FED 9BA44C2621385CB966EBA586F72C284D731FABEE A27677289986DB50844682F8ACB77FC2E86E29AC A9C5DF4D22E99998D9875A5110C01C5A2F6059E7 DCFD35E0BF8CA7344752DE8B6FB21E8933C60243 F3A04C595DB5B6A5F1ECA43E3B7BBB100D811BBE F7DA48BB64BCB84ECBA7EE6935CD23C10D498E23
+# Sat, 19 Oct 2019 02:25:37 GMT
+ENV TOMCAT_MAJOR=8
+# Sat, 19 Oct 2019 02:25:37 GMT
+ENV TOMCAT_VERSION=8.5.47
+# Sat, 19 Oct 2019 02:25:37 GMT
+ENV TOMCAT_SHA512=079b85f3dfca2b137634859208fae6012860201d720d12ff0add3473f1e267d332cb12803958754e1f922599e0d42b7e97f00bcd62584d9148a6f45fde091716
+# Sat, 19 Oct 2019 02:26:04 GMT
+RUN set -eux; 		savedAptMark="$(apt-mark showmanual)"; 	apt-get update; 	apt-get install -y --no-install-recommends 		gnupg dirmngr 		wget ca-certificates 	; 		ddist() { 		local f="$1"; shift; 		local distFile="$1"; shift; 		local success=; 		local distUrl=; 		for distUrl in 			'https://www.apache.org/dyn/closer.cgi?action=download&filename=' 			https://www-us.apache.org/dist/ 			https://www.apache.org/dist/ 			https://archive.apache.org/dist/ 		; do 			if wget -O "$f" "$distUrl$distFile" && [ -s "$f" ]; then 				success=1; 				break; 			fi; 		done; 		[ -n "$success" ]; 	}; 		ddist 'tomcat.tar.gz' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz"; 	echo "$TOMCAT_SHA512 *tomcat.tar.gz" | sha512sum --strict --check -; 	ddist 'tomcat.tar.gz.asc' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz.asc"; 	export GNUPGHOME="$(mktemp -d)"; 	for key in $GPG_KEYS; do 		gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; 	done; 	gpg --batch --verify tomcat.tar.gz.asc tomcat.tar.gz; 	tar -xf tomcat.tar.gz --strip-components=1; 	rm bin/*.bat; 	rm tomcat.tar.gz*; 	command -v gpgconf && gpgconf --kill all || :; 	rm -rf "$GNUPGHOME"; 		nativeBuildDir="$(mktemp -d)"; 	tar -xf bin/tomcat-native.tar.gz -C "$nativeBuildDir" --strip-components=1; 	apt-get install -y --no-install-recommends 		dpkg-dev 		gcc 		libapr1-dev 		libssl-dev 		make 	; 	( 		export CATALINA_HOME="$PWD"; 		cd "$nativeBuildDir/native"; 		gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; 		aprConfig="$(command -v apr-1-config)"; 		./configure 			--build="$gnuArch" 			--libdir="$TOMCAT_NATIVE_LIBDIR" 			--prefix="$CATALINA_HOME" 			--with-apr="$aprConfig" 			--with-java-home="$JAVA_HOME" 			--with-ssl=yes; 		make -j "$(nproc)"; 		make install; 	); 	rm -rf "$nativeBuildDir"; 	rm bin/tomcat-native.tar.gz; 		apt-mark auto '.*' > /dev/null; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; 	find "$TOMCAT_NATIVE_LIBDIR" -type f -executable -exec ldd '{}' ';' 		| awk '/=>/ { print $(NF-1) }' 		| sort -u 		| xargs -r dpkg-query --search 		| cut -d: -f1 		| sort -u 		| xargs -r apt-mark manual 	; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; 	rm -rf /var/lib/apt/lists/*; 		find ./bin/ -name '*.sh' -exec sed -ri 's|^#!/bin/sh$|#!/usr/bin/env bash|' '{}' +; 		chmod -R +rX .; 	chmod 777 logs temp work
+# Sat, 19 Oct 2019 02:26:06 GMT
+RUN set -e 	&& nativeLines="$(catalina.sh configtest 2>&1)" 	&& nativeLines="$(echo "$nativeLines" | grep 'Apache Tomcat Native')" 	&& nativeLines="$(echo "$nativeLines" | sort -u)" 	&& if ! echo "$nativeLines" | grep 'INFO: Loaded APR based Apache Tomcat Native library' >&2; then 		echo >&2 "$nativeLines"; 		exit 1; 	fi
+# Sat, 19 Oct 2019 02:26:06 GMT
+EXPOSE 8080
+# Sat, 19 Oct 2019 02:26:07 GMT
+CMD ["catalina.sh" "run"]
+# Sat, 19 Oct 2019 09:27:28 GMT
+ENV GN_FILE=geonetwork.war
+# Sat, 19 Oct 2019 09:27:28 GMT
+ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
+# Sat, 19 Oct 2019 09:27:28 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_VERSION=3.8.2
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_DOWNLOAD_MD5=da014d9cdef0a855cf04a8aaeb418895
+# Tue, 05 Nov 2019 22:23:45 GMT
+WORKDIR /usr/local/tomcat/webapps
+# Tue, 05 Nov 2019 22:23:59 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/geonetwork.war/download &&      echo "$GN_DOWNLOAD_MD5 *$GN_FILE" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Tue, 05 Nov 2019 22:23:59 GMT
+COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
+# Tue, 05 Nov 2019 22:24:00 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Tue, 05 Nov 2019 22:24:00 GMT
+CMD ["catalina.sh" "run"]
+# Tue, 05 Nov 2019 22:24:17 GMT
+RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
+# Tue, 05 Nov 2019 22:24:18 GMT
+RUN sed -i -e 's#<import resource="../config-db/h2.xml"/>#<!--<import resource="../config-db/h2.xml"/> -->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
+# Tue, 05 Nov 2019 22:24:18 GMT
+COPY file:2dedfd940a86106b2ae284c537f14d365881c03a01b212f81b49177bb22c8d7a in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
+# Tue, 05 Nov 2019 22:24:18 GMT
+COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
+# Tue, 05 Nov 2019 22:24:18 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Tue, 05 Nov 2019 22:24:18 GMT
+CMD ["catalina.sh" "run"]
+```
+
+-	Layers:
+	-	`sha256:9a0b0ce99936ce4861d44ce1f193e881e5b40b5bf1847627061205b092fa7f1d`  
+		Last Modified: Wed, 16 Oct 2019 23:35:00 GMT  
+		Size: 45.4 MB (45380663 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:db3b6004c61a0e86fbf910b9b4a6611ae79e238a336011a1b5f9b177d85cbf9d`  
+		Last Modified: Thu, 17 Oct 2019 04:20:34 GMT  
+		Size: 10.8 MB (10797042 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f8f0759202953be4b156f44bba90b682b61f985f9bbc60e7262b216f70dabb96`  
+		Last Modified: Thu, 17 Oct 2019 04:20:32 GMT  
+		Size: 4.3 MB (4340228 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:6ef14aff1139e1065ec0928ae1c07f2cff8c2b35e760f4b463df5c64e6ea1101`  
+		Last Modified: Thu, 17 Oct 2019 04:20:56 GMT  
+		Size: 50.1 MB (50065461 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:962785d3b7f9bd4442aa6df1862d8ad64e0ee1d57ec02d7d82aeecc0a8b0f4d2`  
+		Last Modified: Thu, 17 Oct 2019 08:38:07 GMT  
+		Size: 4.9 MB (4935455 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:631589572f9b44b8d0b6c2c6c1fc656fc4ae1669367888bfe622bbea1ca9cc83`  
+		Last Modified: Thu, 17 Oct 2019 08:40:08 GMT  
+		Size: 220.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:c55a0c6f4c7b3d24524aa43520898369ae5b6b671f7b2768c92236c1c990ba95`  
+		Last Modified: Fri, 18 Oct 2019 23:46:41 GMT  
+		Size: 104.2 MB (104167782 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:379605d88e88b03820ef61d475cfbe79f7a8ad66e9141ecf42725bdef40c580f`  
+		Last Modified: Sat, 19 Oct 2019 02:32:18 GMT  
+		Size: 150.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:e056aa10ded88422ebcdfb78c799b00b86bb32fe0cb11f4a073fd1c1d84ae31e`  
+		Last Modified: Sat, 19 Oct 2019 02:33:32 GMT  
+		Size: 11.2 MB (11189706 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:6349a1c98d85261d10bdff10e8b58a30ba790c0cecd9895d296b1d65bbd9a03a`  
+		Last Modified: Sat, 19 Oct 2019 02:33:30 GMT  
+		Size: 130.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:82b326de88717f7ab9be547f08d0717f7499bce43e3005c28108de1f06ff41f3`  
+		Last Modified: Tue, 05 Nov 2019 22:24:47 GMT  
+		Size: 208.7 MB (208712881 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b334d65f2455269c4cc4d1d9bbedece0fccbe5a36af12de412bf2d72199098cb`  
+		Last Modified: Tue, 05 Nov 2019 22:24:31 GMT  
+		Size: 250.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:a98058edb350f53a7dae8ca317cb0045359891e4b337c678e05305a8cadadee7`  
+		Last Modified: Tue, 05 Nov 2019 22:24:55 GMT  
+		Size: 12.6 MB (12606657 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:6fa1ec0af9ad0c07ef8e2d5a0410e7e76452cbdff9986c9a20bcc290114a8a0c`  
+		Last Modified: Tue, 05 Nov 2019 22:24:52 GMT  
+		Size: 1.3 KB (1282 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f08ae626aa00dd4134c866125d0fcbda2a5f44530114ada2bdab38fcd5db4cfb`  
+		Last Modified: Tue, 05 Nov 2019 22:24:52 GMT  
+		Size: 555.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:0b2643933a31416cfef5021ddb4d7f65317ec2fbb8d799132a154c4dad0d272e`  
+		Last Modified: Tue, 05 Nov 2019 22:24:52 GMT  
+		Size: 973.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.8-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:ad7d90b60f85fd5414275524236493f6a62dd19e19ec47bbd9d9f7d567845d31
+$ docker pull geonetwork@sha256:d14687e0c3b5915e7c4b52c83429ab3290d8bad21a646db815d63949b094f2d5
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -865,14 +1181,14 @@ $ docker pull geonetwork@sha256:ad7d90b60f85fd5414275524236493f6a62dd19e19ec47bb
 ### `geonetwork:3.8-postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:863018003b12812fdae189f6e095bc7c011424381bfb40b43596540dee8a44ed
+$ docker pull geonetwork@sha256:53cee53391e1c9441166696e10f19f9a7210889d27b53f83f0ab7db2dffb63da
 ```
 
 -	Docker Version: 18.06.1-ce
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **449.6 MB (449583134 bytes)**  
+-	Total Size: **452.2 MB (452199435 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:859ee0aa3360cc0b506cbe1fc6c7fe69b5bc32bf8c33ad1afea84b81b9bee42b`
+-	Image ID: `sha256:ec85b6047b6916c1228ee9a1cc3a065b2ca0a8349219461d46412a872440a18e`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -939,31 +1255,31 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Sat, 19 Oct 2019 09:27:28 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Mon, 21 Oct 2019 16:19:45 GMT
-ENV GN_VERSION=3.8.1
-# Mon, 21 Oct 2019 16:19:46 GMT
-ENV GN_DOWNLOAD_MD5=3147cf5775b250330df2322c9d180eed
-# Mon, 21 Oct 2019 16:19:46 GMT
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_VERSION=3.8.2
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_DOWNLOAD_MD5=da014d9cdef0a855cf04a8aaeb418895
+# Tue, 05 Nov 2019 22:23:45 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:23:59 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/geonetwork.war/download &&      echo "$GN_DOWNLOAD_MD5 *$GN_FILE" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:23:59 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:24:00 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:24:00 GMT
 CMD ["catalina.sh" "run"]
-# Mon, 21 Oct 2019 16:20:20 GMT
+# Tue, 05 Nov 2019 22:24:17 GMT
 RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
-# Mon, 21 Oct 2019 16:20:20 GMT
+# Tue, 05 Nov 2019 22:24:18 GMT
 RUN sed -i -e 's#<import resource="../config-db/h2.xml"/>#<!--<import resource="../config-db/h2.xml"/> -->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
-# Mon, 21 Oct 2019 16:20:21 GMT
+# Tue, 05 Nov 2019 22:24:18 GMT
 COPY file:2dedfd940a86106b2ae284c537f14d365881c03a01b212f81b49177bb22c8d7a in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Mon, 21 Oct 2019 16:20:21 GMT
-COPY file:ae87cab6eab0739a95b3829524c5a3733bc4f9ddd42a6c15afe4e85663dc9f2e in /entrypoint.sh 
-# Mon, 21 Oct 2019 16:20:21 GMT
+# Tue, 05 Nov 2019 22:24:18 GMT
+COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
+# Tue, 05 Nov 2019 22:24:18 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Mon, 21 Oct 2019 16:20:21 GMT
+# Tue, 05 Nov 2019 22:24:18 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1008,35 +1324,35 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Sat, 19 Oct 2019 02:33:30 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:10526a1f1eed1f4637fdad8656b4b20122f78297897db4d00f24b96ec99ea92a`  
-		Last Modified: Mon, 21 Oct 2019 16:20:47 GMT  
-		Size: 206.1 MB (206096794 bytes)  
+	-	`sha256:82b326de88717f7ab9be547f08d0717f7499bce43e3005c28108de1f06ff41f3`  
+		Last Modified: Tue, 05 Nov 2019 22:24:47 GMT  
+		Size: 208.7 MB (208712881 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:fff17f0bb0ac92d93a9c013031803e39d6025d320a35938ae7aedcc3f4853bd4`  
-		Last Modified: Mon, 21 Oct 2019 16:20:32 GMT  
-		Size: 249.0 B  
+	-	`sha256:b334d65f2455269c4cc4d1d9bbedece0fccbe5a36af12de412bf2d72199098cb`  
+		Last Modified: Tue, 05 Nov 2019 22:24:31 GMT  
+		Size: 250.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:164f7f748937e8dcad85f8514e33ddcdbb5db73df98161c48c3df40c228c9d3f`  
-		Last Modified: Mon, 21 Oct 2019 16:20:56 GMT  
-		Size: 12.6 MB (12606496 bytes)  
+	-	`sha256:a98058edb350f53a7dae8ca317cb0045359891e4b337c678e05305a8cadadee7`  
+		Last Modified: Tue, 05 Nov 2019 22:24:55 GMT  
+		Size: 12.6 MB (12606657 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2ed4735690d2649ba35403697d314e90ebcf07bdc64b0d6f95c057094fed6352`  
-		Last Modified: Mon, 21 Oct 2019 16:20:53 GMT  
-		Size: 1.3 KB (1280 bytes)  
+	-	`sha256:6fa1ec0af9ad0c07ef8e2d5a0410e7e76452cbdff9986c9a20bcc290114a8a0c`  
+		Last Modified: Tue, 05 Nov 2019 22:24:52 GMT  
+		Size: 1.3 KB (1282 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:4f052307ced1b6186ba28891a142af5f5dfde10b0e585d3d6738f84b8c4c81a5`  
-		Last Modified: Mon, 21 Oct 2019 16:20:53 GMT  
-		Size: 554.0 B  
+	-	`sha256:f08ae626aa00dd4134c866125d0fcbda2a5f44530114ada2bdab38fcd5db4cfb`  
+		Last Modified: Tue, 05 Nov 2019 22:24:52 GMT  
+		Size: 555.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:560b29ad1040528612bab8c12eea37256e36eccf9f7636bda0dad74846910a4e`  
-		Last Modified: Mon, 21 Oct 2019 16:20:54 GMT  
-		Size: 924.0 B  
+	-	`sha256:0b2643933a31416cfef5021ddb4d7f65317ec2fbb8d799132a154c4dad0d272e`  
+		Last Modified: Tue, 05 Nov 2019 22:24:52 GMT  
+		Size: 973.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:latest`
 
 ```console
-$ docker pull geonetwork@sha256:4b0cf8201e83f1e2af724ea41954bc59444913547cb9ff902cf34e3eb4154408
+$ docker pull geonetwork@sha256:c95d5b4b391ecb72e4b11e503c73813516034241656abd70e6dcf3cecd86e24e
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1046,14 +1362,14 @@ $ docker pull geonetwork@sha256:4b0cf8201e83f1e2af724ea41954bc59444913547cb9ff90
 ### `geonetwork:latest` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:e82f1c18cfd02be4280b1472ffc0e25a91ece265c857f7f5819731e487f93257
+$ docker pull geonetwork@sha256:be2d2be3c59a09549d92bfb61e5ea15d92ba07f05d9421d810f0a596d4b8de33
 ```
 
 -	Docker Version: 18.06.1-ce
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **437.0 MB (436973880 bytes)**  
+-	Total Size: **439.6 MB (439589968 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:c8d04e0920a2dab337a3c1f8b2898f80e96c5282ed07ae7781c32f684da52f9c`
+-	Image ID: `sha256:c865a92a37f24061e430f515e9a48349dbaa1d364cd53ddec5d8d5184b5b490d`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -1120,19 +1436,19 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Sat, 19 Oct 2019 09:27:28 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Mon, 21 Oct 2019 16:19:45 GMT
-ENV GN_VERSION=3.8.1
-# Mon, 21 Oct 2019 16:19:46 GMT
-ENV GN_DOWNLOAD_MD5=3147cf5775b250330df2322c9d180eed
-# Mon, 21 Oct 2019 16:19:46 GMT
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_VERSION=3.8.2
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_DOWNLOAD_MD5=da014d9cdef0a855cf04a8aaeb418895
+# Tue, 05 Nov 2019 22:23:45 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:23:59 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/geonetwork.war/download &&      echo "$GN_DOWNLOAD_MD5 *$GN_FILE" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:23:59 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:24:00 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:24:00 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1177,19 +1493,19 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Sat, 19 Oct 2019 02:33:30 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:10526a1f1eed1f4637fdad8656b4b20122f78297897db4d00f24b96ec99ea92a`  
-		Last Modified: Mon, 21 Oct 2019 16:20:47 GMT  
-		Size: 206.1 MB (206096794 bytes)  
+	-	`sha256:82b326de88717f7ab9be547f08d0717f7499bce43e3005c28108de1f06ff41f3`  
+		Last Modified: Tue, 05 Nov 2019 22:24:47 GMT  
+		Size: 208.7 MB (208712881 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:fff17f0bb0ac92d93a9c013031803e39d6025d320a35938ae7aedcc3f4853bd4`  
-		Last Modified: Mon, 21 Oct 2019 16:20:32 GMT  
-		Size: 249.0 B  
+	-	`sha256:b334d65f2455269c4cc4d1d9bbedece0fccbe5a36af12de412bf2d72199098cb`  
+		Last Modified: Tue, 05 Nov 2019 22:24:31 GMT  
+		Size: 250.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:postgres`
 
 ```console
-$ docker pull geonetwork@sha256:ad7d90b60f85fd5414275524236493f6a62dd19e19ec47bbd9d9f7d567845d31
+$ docker pull geonetwork@sha256:d14687e0c3b5915e7c4b52c83429ab3290d8bad21a646db815d63949b094f2d5
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1199,14 +1515,14 @@ $ docker pull geonetwork@sha256:ad7d90b60f85fd5414275524236493f6a62dd19e19ec47bb
 ### `geonetwork:postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:863018003b12812fdae189f6e095bc7c011424381bfb40b43596540dee8a44ed
+$ docker pull geonetwork@sha256:53cee53391e1c9441166696e10f19f9a7210889d27b53f83f0ab7db2dffb63da
 ```
 
 -	Docker Version: 18.06.1-ce
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **449.6 MB (449583134 bytes)**  
+-	Total Size: **452.2 MB (452199435 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:859ee0aa3360cc0b506cbe1fc6c7fe69b5bc32bf8c33ad1afea84b81b9bee42b`
+-	Image ID: `sha256:ec85b6047b6916c1228ee9a1cc3a065b2ca0a8349219461d46412a872440a18e`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -1273,31 +1589,31 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Sat, 19 Oct 2019 09:27:28 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Mon, 21 Oct 2019 16:19:45 GMT
-ENV GN_VERSION=3.8.1
-# Mon, 21 Oct 2019 16:19:46 GMT
-ENV GN_DOWNLOAD_MD5=3147cf5775b250330df2322c9d180eed
-# Mon, 21 Oct 2019 16:19:46 GMT
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_VERSION=3.8.2
+# Tue, 05 Nov 2019 22:23:45 GMT
+ENV GN_DOWNLOAD_MD5=da014d9cdef0a855cf04a8aaeb418895
+# Tue, 05 Nov 2019 22:23:45 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:23:59 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/geonetwork.war/download &&      echo "$GN_DOWNLOAD_MD5 *$GN_FILE" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:23:59 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:24:00 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Mon, 21 Oct 2019 16:20:03 GMT
+# Tue, 05 Nov 2019 22:24:00 GMT
 CMD ["catalina.sh" "run"]
-# Mon, 21 Oct 2019 16:20:20 GMT
+# Tue, 05 Nov 2019 22:24:17 GMT
 RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
-# Mon, 21 Oct 2019 16:20:20 GMT
+# Tue, 05 Nov 2019 22:24:18 GMT
 RUN sed -i -e 's#<import resource="../config-db/h2.xml"/>#<!--<import resource="../config-db/h2.xml"/> -->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
-# Mon, 21 Oct 2019 16:20:21 GMT
+# Tue, 05 Nov 2019 22:24:18 GMT
 COPY file:2dedfd940a86106b2ae284c537f14d365881c03a01b212f81b49177bb22c8d7a in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Mon, 21 Oct 2019 16:20:21 GMT
-COPY file:ae87cab6eab0739a95b3829524c5a3733bc4f9ddd42a6c15afe4e85663dc9f2e in /entrypoint.sh 
-# Mon, 21 Oct 2019 16:20:21 GMT
+# Tue, 05 Nov 2019 22:24:18 GMT
+COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
+# Tue, 05 Nov 2019 22:24:18 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Mon, 21 Oct 2019 16:20:21 GMT
+# Tue, 05 Nov 2019 22:24:18 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1342,27 +1658,27 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Sat, 19 Oct 2019 02:33:30 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:10526a1f1eed1f4637fdad8656b4b20122f78297897db4d00f24b96ec99ea92a`  
-		Last Modified: Mon, 21 Oct 2019 16:20:47 GMT  
-		Size: 206.1 MB (206096794 bytes)  
+	-	`sha256:82b326de88717f7ab9be547f08d0717f7499bce43e3005c28108de1f06ff41f3`  
+		Last Modified: Tue, 05 Nov 2019 22:24:47 GMT  
+		Size: 208.7 MB (208712881 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:fff17f0bb0ac92d93a9c013031803e39d6025d320a35938ae7aedcc3f4853bd4`  
-		Last Modified: Mon, 21 Oct 2019 16:20:32 GMT  
-		Size: 249.0 B  
+	-	`sha256:b334d65f2455269c4cc4d1d9bbedece0fccbe5a36af12de412bf2d72199098cb`  
+		Last Modified: Tue, 05 Nov 2019 22:24:31 GMT  
+		Size: 250.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:164f7f748937e8dcad85f8514e33ddcdbb5db73df98161c48c3df40c228c9d3f`  
-		Last Modified: Mon, 21 Oct 2019 16:20:56 GMT  
-		Size: 12.6 MB (12606496 bytes)  
+	-	`sha256:a98058edb350f53a7dae8ca317cb0045359891e4b337c678e05305a8cadadee7`  
+		Last Modified: Tue, 05 Nov 2019 22:24:55 GMT  
+		Size: 12.6 MB (12606657 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2ed4735690d2649ba35403697d314e90ebcf07bdc64b0d6f95c057094fed6352`  
-		Last Modified: Mon, 21 Oct 2019 16:20:53 GMT  
-		Size: 1.3 KB (1280 bytes)  
+	-	`sha256:6fa1ec0af9ad0c07ef8e2d5a0410e7e76452cbdff9986c9a20bcc290114a8a0c`  
+		Last Modified: Tue, 05 Nov 2019 22:24:52 GMT  
+		Size: 1.3 KB (1282 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:4f052307ced1b6186ba28891a142af5f5dfde10b0e585d3d6738f84b8c4c81a5`  
-		Last Modified: Mon, 21 Oct 2019 16:20:53 GMT  
-		Size: 554.0 B  
+	-	`sha256:f08ae626aa00dd4134c866125d0fcbda2a5f44530114ada2bdab38fcd5db4cfb`  
+		Last Modified: Tue, 05 Nov 2019 22:24:52 GMT  
+		Size: 555.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:560b29ad1040528612bab8c12eea37256e36eccf9f7636bda0dad74846910a4e`  
-		Last Modified: Mon, 21 Oct 2019 16:20:54 GMT  
-		Size: 924.0 B  
+	-	`sha256:0b2643933a31416cfef5021ddb4d7f65317ec2fbb8d799132a154c4dad0d272e`  
+		Last Modified: Tue, 05 Nov 2019 22:24:52 GMT  
+		Size: 973.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
